# http

./: CMakeLists.txt  build.sh  make.sh
include/http/: methods.hpp  url.hpp  utils.hpp
include/http/request/: request.hpp
include/http/server/: server.hpp
src/: main.cpp
src/request/: request.cpp
src/server/: server.cpp
tests/: CMakeLists.txt  testrequestparser.cpp
